--- a/src/Css/sidebar.css
+++ b/src/Css/sidebar.css
@@ -275,6 +275,29 @@ p {
     left: 0;
     width: 480px;
     transition: 0.2s linear;
+    height: 100vh;
+    position: fixed;
+  }
+  .sidebar{
+    height: 100vh;
+    position: fixed;
+  }
+  .content-wrapper {
+    height: 100vh;
+  }
+  .sidebar.open {
+    left: 0;
+    width: 180px;
+    transition: 0.2s linear;
+    height: 100vh;
+  }
+  .content-wrapper {
+    margin-left: 180px;
+    transition: 0.3s ease;
+    height: 100vh;
+  }
+  .collapsed{
+    height: 100vh;
   }
 }
 @media only screen and (max-width: 1297px) {
