--- a/src/Css/dashboard.css
+++ b/src/Css/dashboard.css
@@ -35,6 +35,15 @@
 }
 
 
+.loadingscreen{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 
 #menu-toggle {
@@ -86,12 +95,48 @@ table thead th {
 }
 
 
-
-.modal-content{
-    width: 90vw;
-    background-color: #1246ac;
-}
-
+.custom-modal {
+    max-width: 9vw; /* Modal width 90% of the viewport width */
+    width: 9vw; 
+    border: 1p solid black;
+    display: flex;
+    justify-items: center;
+    padding-right: 1400px;/* Ensures that the width is always 90vw */
+  }
+  .dio{ 
+    background-color: white;
+  }
+  
+  .custom-form {
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap; 
+    justify-content: center;
+  }
+  .fade{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding-right: 50%; */
+    
+  }
+  
+  .txt_field {
+    margin-bottom: 15px;
+  }
+  
+  .row {
+    display: flex;
+   
+  }
+  
+  @media (max-width: 768px) {
+    .row {
+      flex-direction: column;
+      
+    }
+  }
+  
 
 
 
@@ -215,10 +260,12 @@ table thead th {
 }
 
 .record-header {
-    padding: 1rem;
+   
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 5;
 
 }
 
