--- a/src/Css/dashboard.css
+++ b/src/Css/dashboard.css
@@ -37,7 +37,7 @@
 
 .loadingscreen{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -101,7 +101,7 @@ table thead th {
     border: 1p solid black;
     display: flex;
     justify-items: center;
-    padding-right: 1400px;/* Ensures that the width is always 90vw */
+    padding-right: 1000px;/* Ensures that the width is always 90vw */
   }
   .dio{ 
     background-color: white;
@@ -266,6 +266,7 @@ table thead th {
     align-items: center;
     flex-wrap: wrap;
     gap: 5;
+    padding: 20px;
 
 }
 
