--- a/src/Css/dashboard.css
+++ b/src/Css/dashboard.css
@@ -296,9 +296,10 @@ table thead th {
 }
 
 .records {
-    box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%);
-    background: #b5ccf8;
+    /* box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%); */
+    /* background: #b5ccf8; */
     border-radius: 3px;
+    height:50vh;
 }
 
 .record-header {
@@ -308,7 +309,8 @@ table thead th {
     align-items: center;
     flex-wrap: wrap;
     gap: 5;
-    padding: 20px;
+    /* padding: 20px; */
+     background: #b5ccf8;
 
 }
 
@@ -576,8 +578,9 @@ form .txt_field{
   }
 
   select{
-  margin-left: 420px;
-  text-align: center;
+  /* margin-left: 420px; */
+    margin: 0px;
+    padding: 0px;
     
   }
 
