--- a/src/Css/info.css
+++ b/src/Css/info.css
@@ -134,3 +134,29 @@ textarea {
     min-height: 100px;
     max-height: 150px;
 }
+@media (max-width: 768px){
+    .totalamount{
+        font-size: 9px;
+    }
+    .totalbox{
+        background-color: white;
+    padding: 3px 5px 3px 5px;
+    border: black 1px solid;
+   margin-top: 0px;
+   height: 25px;
+  
+    }
+    .totalbox h4{
+         font-size: 10px;
+    }
+}
+
+
+@media (max-width:960px){
+    .totalamount{
+        font-size: 15px;
+    }
+    .totalbox h4{
+        font-size: 15px;
+   }
+}
