--- a/src/Css/dashboard.css
+++ b/src/Css/dashboard.css
@@ -296,9 +296,10 @@ table thead th {
 }
 
 .records {
-    box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%);
-    background: #b5ccf8;
+    /* box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%); */
+    /* background: #b5ccf8; */
     border-radius: 3px;
+    height:50vh;
 }
 
 .record-header {
@@ -308,7 +309,8 @@ table thead th {
     align-items: center;
     flex-wrap: wrap;
     gap: 5;
-    padding: 20px;
+    /* padding: 20px; */
+     background: #b5ccf8;
 
 }
 
@@ -442,7 +444,20 @@ Button:focus {
     border: none !important;  /* Remove the border */
     box-shadow: none;         /* Remove box-shadow if any */
   }
+   
 
+  .nextData{
+    width: fit-content;
+    padding: 10px;
+  }
+
+  .nextData:hover{
+      transition: 0.3s linear;
+      color:white;
+      background-color: #007bff;
+      border-radius: 10px;
+     
+  }
  
 
 
@@ -467,6 +482,13 @@ Button:focus {
     font-size: .8rem;
 }
 
+
+.cardyellow{
+    background-color:yellow;
+    box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%);
+    border-radius: 3px;
+    padding: 1rem;
+}
 
 .cardAction{
     background-color:#1246ac;
@@ -576,8 +598,9 @@ form .txt_field{
   }
 
   select{
-  margin-left: 420px;
-  text-align: center;
+  /* margin-left: 420px; */
+    margin: 0px;
+    padding: 0px;
     
   }
 
