--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,14 @@
   font-family: "Roboto", serif;
  
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide arrows for Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
